# demos

./: .gitignore  README.md
ZephyrDemo/: .clangd  CMakeLists.txt  WORK_IN_PROGRESS.txt  app.overlay  prj.conf
ZephyrDemo/build_1/: .ninja_log  .vscode-nrf-connect.json  CMakeCache.txt  ZephyrDemo_sysbuild_cache.txt  build.ninja  build_info.yml  build_info.yml.bak  cmake_install.cmake  domains.yaml  merged.hex  pm.config
ZephyrDemo/build_1/Kconfig/: Kconfig.modules  Kconfig.sysbuild.modules  kconfig_module_dirs.cmake
ZephyrDemo/build_1/Kconfig/arch/: Kconfig
ZephyrDemo/build_1/Kconfig/boards/: Kconfig.defconfig  Kconfig.sysbuild
ZephyrDemo/build_1/Kconfig/soc/: Kconfig  Kconfig.soc
ZephyrDemo/build_1/ZephyrDemo/: .ninja_deps  .ninja_log  CMakeCache.txt.tmp  build.ninja  build_info.yml  cmake_install.cmake  compile_commands.json  sysbuild_modules.txt  syscalls-v4.2.99.xml  zephyr_modules.txt  zephyr_settings.txt
ZephyrDemo/build_1/ZephyrDemo/Kconfig/: Kconfig.shield  Kconfig.shield.defconfig  kconfig_module_dirs.env
ZephyrDemo/build_1/ZephyrDemo/zephyr/: .cmake.dotconfig.checksum  .config  cmake_install.cmake  edt.pickle  edt.pickle.cmake  generated_nrfutil_batch.json  isr_tables.c  linker.cmd  linker.cmd.dep  linker_zephyr_pre0.cmd  linker_zephyr_pre0.cmd.dep  runners.yaml  snippets_generated.cmake  zephyr.dts  zephyr.dts.d  zephyr.dts.pre  zephyr.elf  (+5 more)
ZephyrDemo/build_1/_sysbuild/: autoconf.h  cmake_install.cmake
ZephyrDemo/build_1/zephyr/: .cmake.dotconfig.checksum  .config
ZephyrDemo/modules-staging/: readme.txt
ZephyrDemo/src/: main.c  main.h
(+578 files in other folders)
